--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,15 @@
   "description": "Ecommerce Mern project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "author": "Tanushree Soni",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3",
+    "mongoose": "^7.4.4",
     "nodemon": "^3.0.1"
   }
 }
